<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <TextView
            style="@style/Header1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/mdr"
            android:gravity="center"/>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_vista" />

            <EditText
                android:id="@+id/mdr_vista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal" />

            <TextView
                style="@style/Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/porcentagem" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_2a6" />

            <EditText
                android:id="@+id/mdr_2a6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal" />

            <TextView
                style="@style/Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/porcentagem"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c_7a12" />

            <EditText
                android:id="@+id/mdr_7a12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal" />

            <TextView
                style="@style/Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/porcentagem"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/Header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/rav" />

            <EditText
                android:id="@+id/rav_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal" />

            <TextView
                style="@style/Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/porcentagem"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/Header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/montante" />

            <TextView
                style="@style/Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reais"/>


            <EditText
                android:id="@+id/valor_venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/Header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/parcelas" />

            <EditText
                android:id="@+id/parcelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="number" />

        </TableRow>

        <Button
            android:text="Calcular"
            android:layout_height="wrap_content"
            android:id="@+id/btncalcular"
            android:layout_width="match_parent"></Button>

    </LinearLayout>

</ScrollView>